--- a/ru/.htaccess
+++ b/ru/.htaccess
@@ -1,11 +1,11 @@
 RewriteEngine on
 
 RewriteCond %{HTTP:Accept-Language} ^ru_RU [NC]
-RewriteRule ^/$ /ru.php [L,R=302]
+RewriteRule ^/$ /ru/ [L,R=302]
 
 # language starts with FR
 RewriteCond %{HTTP:Accept-Language} ^ru [NC]
-RewriteRule ^/$ /ru.php [L,R=302]
+RewriteRule ^/$ /ru/ [L,R=302]
 
 # else redirect to the English version
 RewriteRule ^/$ / [L,R=302]
@@ -17,4 +17,4 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 
 RewriteCond %{HTTP_USER_AGENT} (bingbot|AhrefsBot|SemrushBot|PetalBot|DataForSeoBot|MegaIndex.ru|Barkrowler|SeekportBot|SemrushBot|Barkrowler) [NC]
 RewriteRule .* - [F]
-ErrorDocument 404 /assets/404.php
+ErrorDocument 404 /ru/404.php
