--- a/ru/.htaccess
+++ b/ru/.htaccess
@@ -17,4 +17,4 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 
 RewriteCond %{HTTP_USER_AGENT} (bingbot|AhrefsBot|SemrushBot|PetalBot|DataForSeoBot|MegaIndex.ru|Barkrowler|SeekportBot|SemrushBot|Barkrowler) [NC]
 RewriteRule .* - [F]
-ErrorDocument 404 /ru/404.php
+ErrorDocument 404 /assets/404ru.php
